Binding de propriedades - video 1

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,8 +16,4 @@
 <li>{{valor.id}} - {{valor.nome}} - {{valor.descricao}}</li>
 </ul>
 
-<p> Teste para ver como o git vai reagir</p>
-
-<label>Digite um nome</label>
-<input [(ngModel)]="nome">
-<button (click)="adicionar()">Adicionar Intem</button>
+<app-binding-page></app-binding-page>
