--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,3 +17,9 @@
 </ul>
 
 <app-binding-page></app-binding-page>
+
+<h1>Exemplo de PIPE</h1>
+
+<p>Data: {{umaData | date:'long'}}</p>
+<p>Currenry: {{umDinheiro |currency: 'BRL'}}</p>
+<p>Customizado Upercase: {{nome | appUppercase}}</p>
