--- a/src/app/pages/client.list.page.component.html
+++ b/src/app/pages/client.list.page.component.html
@@ -1,1 +1,13 @@
 <p>Essa é a primeira página do Cliente</p>
+
+<div>
+
+<h1>Você é um cliente premium, tem acesso a ifnormações diferenciadas</h1>
+
+<ul *ngFor ="let client of clients">
+
+<li>{{client}}</li>
+    
+</ul>
+
+</div>
