--- a/src/app/pages/client.list.page.component.html
+++ b/src/app/pages/client.list.page.component.html
@@ -6,7 +6,7 @@
 
 <ul *ngFor ="let client of clients">
 
-<li>{{client}}</li>
+<li> <a [routerLink]="['/client/detalhe', client.id]">{{client.nome}}</a> </li>
     
 </ul>
 
