--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <h1>Aplicação</h1>
 <app-header></app-header> <br />
 <a [routerLink]="['pai']"> Ir para Componente Pai</a> <br />
+
+<a [routerLink]="['rxjs']">IR PARA TELA DE RXJS</a>
+
 <router-outlet></router-outlet>
 
 <!--
