--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,9 @@
 <app-header></app-header> <br />
 <a [routerLink]="['pai']"> Ir para Componente Pai</a> <br />
 
-<a [routerLink]="['rxjs']">IR PARA TELA DE RXJS</a>
+<a [routerLink]="['rxjs']">IR PARA TELA DE RXJS</a> <br />
+
+<a [routerLink]="['listapessoas']">IR PARA LISTA DE PESSOAS</a>
 
 <router-outlet></router-outlet>
 
