api rest testada

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,8 @@
 
 <router-outlet></router-outlet>
 
+<app-user-page></app-user-page>
+
 <!--
 <div *ngIf="clientePremium; else naopremium">
 <p>Você é um cliente premium, tem acesso a informações privilegiadas </p>
